# TrendStudio-Holding

./: .gitignore  A1_TEST_RESULTS.md  A1_v2.2_TEST_RESULTS.md  A1_v2.3_TEST_RESULTS.md  A1_v2.4_TEST_RESULTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  HANDOFF_Landing_v1.0_W1.5_Phase3_to_Phase4.md  Kinoholding_Investor_Deck_v1.pptx  Kinoholding_Investor_Deck_v2.html  Kinoholding_Investor_Deck_v4.pptx  Kinoholding_Investor_Deck_v4_EN.pptx  P5_Phase2B_Verification_Report_v1.0.docx  P7_Speaker_Kit_Verification_Report_20260413.txt  PROMPT_audit_investor_public_v1_DRAFT2.md  PROMPT_audit_investor_public_v1_DRAFT3.md  PROMPT_audit_investor_public_v1_DRAFT4.md  PROMPT_audit_investor_public_v1_DRAFT5.md  PROMPT_audit_investor_public_v1_DRAFT6.md  PROMPT_audit_investor_public_v1_FINAL.md  Pamyatka_Spikera_v1.docx  Pitch_Speaker_Kit_TrendStudio.docx  Speaker_Kit_v2_DRAFT.md  TrendStudio_QA_50.docx  TrendStudio_Speaker_Kit.docx  audit_findings.xlsx  audit_fix_plan_v1.md  audit_progress.json  generate_xlsx.py  investor_model_v1.0_Public.xlsx  investor_model_v3_Internal.xlsx  investor_model_v3_Public.xlsx  jest.config.js  landing_v1.0.html  landing_v2.0.html  landing_v2.1.html  landing_v2.2.html  p5_verification_report.json  (+56 more)
pipeline/: .gitignore  AUDIT_v1.3.5.md  Makefile  README.md  formula_injector.py  pyproject.toml  requirements.txt  sterilize.py
pipeline/artifacts/: .gitkeep  B2_presentation.html  B2_presentation.pptx  B3_memo.docx  B4_onepager.docx  P5_verification_report.docx  dashboard.html  dashboard.xlsx  model.xlsx  model_report.docx
pipeline/generators/: __init__.py  base.py  cashflow.py  combined_stress_tests.py  core.py  costs_gen.py  docx_builder.py  finance_core.py  hash_manifest.py  lhs_copula.py  market_bootstrap.py  monte_carlo.py  perturbation_analysis.py  pnl.py  provenance.py  revenue.py  (+7 more)
(+573 files in other folders)
